Adds .gif for player 1 and 2 as well as CSS formatted background

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 <html>
-  <h2>Testing infrastructure working!</h2><br>
+  <h2>Enter Player Names</h2><br>
   <form action='/names' method = 'post'>
       Player 1: <input type="text" name="player1"><br>
-      Player 2: <input type='text' name='player2'><br>
+      Player 2: <input type='text' name='player2'><br><br>
       <input type="submit" value="Create Players"><br>
   </form>
 </html>
