--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,36 @@
+<img src="https://i.ytimg.com/vi/rEf7lCKSn24/maxresdefault.jpg" style='position:fixed;top:0px;left;0px;width:100%;height100%;z-index:-1;'>
+
+<audio controls autoplay>
+ <source src="http://66.90.93.122/ost/street-fighter-2-turbo/qvifdxccss/02.-player-select.mp3" type="audio/mpeg">
+ Your browser does not support the audio element.
+</audio>
+
+
 <html>
-  <h2>Enter Player Names</h2><br>
+<style>
+h2{
+  color:red;
+  font-family: "Monsters Attack!";
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  font-size: 150%
+}
+
+#btn_s{
+ width:100px;
+ margin-left:auto;
+ margin-right:auto;
+}
+
+
+</style>
+
+  <h2 style="position:fixed;bottom:70px;left:55px">Player 1</h2>
+  <h2 style="position:fixed;bottom:70px;right:60px">Player 2</h2>
+
   <form action='/names' method = 'post'>
-      Player 1: <input type="text" name="player1"><br>
-      Player 2: <input type='text' name='player2'><br><br>
-      <input type="submit" value="Create Players"><br>
+      <input type="text" name="player1" style="position:fixed;bottom:50px;left:50px" >
+      <input type='text' name='player2' style="position:fixed;bottom:50px;right:50px">
+      <input type='submit' value='Fight!' style="position:fixed;bottom:50px;left:667px;width:100px">
   </form>
+
 </html>
