--- a/views/index.erb
+++ b/views/index.erb
@@ -29,8 +29,8 @@ h2{
 
   <form action='/names' method = 'post'>
       <input type="text" name="player1" style="position:fixed;bottom:50px;left:50px" >
-      <input type='text' name='player2' style="position:fixed;bottom:50px;right:50px">
-      <input type='submit' value='Fight!' style="position:fixed;bottom:50px;left:667px;width:100px">
+      <input type="text" name="player2" style="position:fixed;bottom:50px;right:50px">
+      <input type="submit" value="Fight!" style="position:fixed;bottom:50px;left:667px;width:100px">
   </form>
 
 </html>
