--- a/views/play.erb
+++ b/views/play.erb
@@ -1,7 +1,7 @@
 <html>
   <div>
-    <%= @player1 %> gets <%= @hp_player1 %> HP<br>
-    <%= @player2 %> gets <%= @hp_player2 %> HP<br><br>
+    <%= $player1.player_name %> gets <%= $player1.player_hp %> HP<br>
+    <%= $player2.player_name %> gets <%= $player2.player_hp %> HP<br><br>
     <form action="/fight" method="get">
       <input type="submit" value="FIGHT!">
     </form>
