--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,10 +1,17 @@
 <html>
-<% if $game.turn.odd? %>
-<%= $player1.player_name %> attacked <%= $player2.player_name %>
-<% elsif $game.turn.even? %>
-<%= $player2.player_name %> attacked <%= $player1.player_name %>
+<% if @game.turn.odd? %>
+<%= @game.player1.player_name %> attacked <%= @game.player2.player_name %> and caused <%=@game.damage%> damage
+<% elsif @game.turn.even? %>
+<%= @game.player2.player_name %> attacked <%= @game.player1.player_name %> and caused <%=@game.damage%> damage
 <% end %>
-<form action="/play" method="get">
-  <input type="submit" value="Next Turn">
-</form>
+
+<% if @game.player1.player_hp > 0 && @game.player2.player_hp > 0%>
+  <form action="/fight" method="get">
+    <input type="submit" value="Next Turn">
+  </form>
+<% elsif @game.player1.player_hp <= 0 || @game.player2.player_hp <= 0%>
+  <form action="/game_over" method="get">
+    <input type="submit" value="Next Turn">
+  </form>
+<% end %>
 </html>
