--- a/views/home.erb
+++ b/views/home.erb
@@ -24,13 +24,13 @@ h2{
 
 </style>
 
-  <h2 style="position:fixed;bottom:70px;left:55px">Player 1</h2>
-  <h2 style="position:fixed;bottom:70px;right:60px">Player 2</h2>
+  <h2 id="player1_label" style="position:fixed;bottom:70px;left:55px">Player 1</h2>
+  <h2 id="player2_label" style="position:fixed;bottom:70px;right:60px">Player 2</h2>
 
   <form action='/names' method = 'post'>
-      <input type="text" name="player1" style="position:fixed;bottom:50px;left:50px" >
-      <input type="text" name="player2" style="position:fixed;bottom:50px;right:50px">
-      <input type="submit" value="Fight!" style="position:fixed;bottom:50px;left:667px;width:100px">
+      <input id="player1_input" type="text" name="player1" style="position:fixed;bottom:50px;left:50px" >
+      <input id="player2_input" type="text" name="player2" style="position:fixed;bottom:50px;right:50px">
+      <input id="fight_button" type="submit" value="Fight!" style="position:fixed;bottom:50px;left:667px;width:100px">
   </form>
 
 </html>
