adds game over logic and introduces session persistence in game over route

--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -6,6 +6,6 @@
 
   <body>
     <h1>Game Over</h1>
-    <div id="game_over_message">PLAYER wins!</div>
+    <div id="game_over_message"><%= @game_over_message %></div>
   </body>
 </html>
