Adds sessions to the controller and guard clauses at the beginning of each route

--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -6,6 +6,6 @@
 
   <body>
     <h1>Game Over</h1>
-    <div id="game_over_message"><%= @game_over_message %></div>
+    <div id="game_over_message"><%= @game_over.message %></div>
   </body>
 </html>
