--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -8,4 +8,10 @@
     <h1>Game Over</h1>
     <div id="game_over_message"><%= @game_over.message %></div>
   </body>
+
+  <div id="play_again_button">
+    <form action="/" method="post">
+      <input type="submit" value="Play Again">
+    </form>
+  </div>
 </html>
