--- a/views/home.erb
+++ b/views/home.erb
@@ -1,28 +1,16 @@
-<img src="https://i.ytimg.com/vi/rEf7lCKSn24/maxresdefault.jpg" style='position:fixed;top:0px;left;0px;width:100%;height100%;z-index:-1;'>
 
-<audio controls autoplay>
- <source src="http://66.90.93.122/ost/street-fighter-2-turbo/qvifdxccss/02.-player-select.mp3" type="audio/mpeg">
- Your browser does not support the audio element.
-</audio>
-
-
+<!DOCTYPE html>
 <html>
-<style>
-h2{
-  color:red;
-  font-family: "Monsters Attack!";
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  font-size: 150%
-}
+  <head>
+    <!img src="https://i.ytimg.com/vi/rEf7lCKSn24/maxresdefault.jpg" style='position:fixed;top:0px;left;0px;width:100%;height100%;z-index:-1;'>
+    <link rel="stylesheet" href="css/home.css" type="text/css">
+    <audio controls autoplay>
+     <source src="http://66.90.93.122/ost/street-fighter-2-turbo/qvifdxccss/02.-player-select.mp3" type="audio/mpeg">
+     Your browser does not support the audio element.
+    </audio>
+  </head>
 
-#btn_s{
- width:100px;
- margin-left:auto;
- margin-right:auto;
-}
-
-
-</style>
+  <body>
 
   <h1 id="sign_in_message">You need to sign in to begin the game</h1>
   <h2 id="player1_label" style="position:fixed;bottom:70px;left:55px">Player 1</h2>
@@ -33,5 +21,7 @@ h2{
       <input id="player2_input" type="text" name="player2" style="position:fixed;bottom:50px;right:50px">
       <input id="fight_button" type="submit" value="Fight!" style="position:fixed;bottom:50px;left:667px;width:100px">
   </form>
+
+</body>
 
 </html>
