--- a/views/home.erb
+++ b/views/home.erb
@@ -18,7 +18,9 @@
       <form id="sign_in_form" action='/fight' method = 'post'>
         <input id="player1_input" class="player_input" type="text" name="player1" placeholder="Enter Name">
         <input id="player2_input" class="player_input" type="text" name="player2" placeholder="Enter Name">
-        <div id="fight_button_wrapper"><input id="fight_button" type="submit" value="Fight!"></div>
+        <div id="fight_button_wrapper">
+          <input id="fight_button" type="submit" value="Fight!">
+        </div>
       </form>
     </div>
 
