--- a/views/fight.erb
+++ b/views/fight.erb
@@ -26,20 +26,24 @@
     </div>
 
 
-  <% if @game.turn.odd? %>
-    <form action="/attack">
-      <input type="submit" value="<%= @game.player1.player_name %> Attack!" style="position:fixed;bottom:50px;left:667px;width:100px">
-    </form>
-  <% else %>
-    <form action="/attack">
-      <input type="submit" value="<%= @game.player2.player_name %> Attack!" style="position:fixed;bottom:50px;left:667px;width:100px">
-    </form>
-  <% end %>
+  <div id="button_wrapper">
+    <div id="attack_button_wrapper">
+      <% if @game.turn.odd? %>
+        <form method="get" action="/attack">
+          <input id="attack_button" type="submit" value="<%= @game.player1.player_name %>, Attack!">
+        </form>
+      <% else %>
+        <form method="get" action="/attack">
+          <input id="attack_button" type="submit" value="<%= @game.player2.player_name %>, Attack!">
+        </form>
+      <% end %>
+    </div>
 
-  <div id="quit_game_button">
-    <form action="/" method="post">
-      <input type="submit" value="Quit Game">
-    </form>
+    <div id="quit_game_button_wrapper">
+      <form action="/" method="post">
+        <input id="quit_game_button" type="submit" value="Quit Game">
+      </form>
+    </div>
   </div>
 
 
