--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Attack! </title>
+    <title>Attack!</title>
+    <link href="css/attack.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
+      <div id="player1_column">
+        <div id="player_name"><%= @game.player1.player_name %></div>
+        <div id="player_hp"><%= @game.player1.player_hp %> HP</div>
+        <div id="player_label">Player 1</div>
+        <iframe src="images/player_1_image.gif"></iframe>
+      </div>
+
+      <div id="player2_column">
+        <div id="player_name"><%= @game.player2.player_name %></div>
+        <div id="player_hp"><%= @game.player2.player_hp %> HP</div>
+        <div id="player1_sprite_wrapper">
+          <div id="player_label">Player 2</div>
+          <iframe src="images/player_2_image.gif">
+        </div>
+      </div>
+
+    <div id="center_column">
+      <div id="message_visual">
+        <% if @game.game_over %>
+          <div id="game_over_message"> GAME OVER </div>
+        <% elsif @game.turn.odd?  %>
+          <iframe src="images/arrow_right.gif"></iframe>
+        <% else %>
+          <iframe src="images/arrow_left.gif"></iframe>
+        <% end %>
+      </div>
+    </div>
+
     <div id="attack_message">
       <% if @game.turn.odd? %>
         <%= @game.player2.player_name %> attacked <%= @game.player1.player_name %> and caused <%= @damage %> damage.
